--- a/switch.css
+++ b/switch.css
@@ -21,7 +21,6 @@ h1{
   color: darkgray;
   display: flex;
   justify-content: center;
-  bottom: 1px;
 }
 
 .container {
@@ -38,7 +37,7 @@ h1{
   display: block;
   position: relative;
   border-radius: 2rem;
-  background-color: #fff;
+  background-color: #f03d3d;
   box-shadow:inset 0 0 1.5rem 1px rgba(0 0 0 / 15%);
   cursor: pointer;
 }
@@ -52,7 +51,7 @@ h1{
   transform: translateY(-50%);
   border-radius: 50%;
   box-shadow: 0 0 0.25rem 1px rgba(0 0 0 / 15%);
-  background: #f03d3d;
+  background: #fff;
 }
 
 /* 체크박스가 체크되면 변경 이벤트 */
