--- a/popup.css
+++ b/popup.css
@@ -19,6 +19,7 @@ h1 {
 
 .contact {
   margin-top: 2rem;
+  padding-bottom: 1rem;
   color: darkgray;
   display: flex;
   justify-content: center;
@@ -76,4 +77,31 @@ h1 {
 
 .toggleSwitch.actived-already .toggleButton {
   transition: none;
+}
+
+.ad {
+  text-shadow: 1px 1px 1px #575757;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+
+  margin-top: 2rem;
+  max-width: 100%;
+  height: 9rem;
+  border-radius: 20px;
+  background: linear-gradient(120deg, rgb(62, 235, 76) 0%, rgb(42, 117, 255) 92%);
+}
+
+.adTitle {
+  color: white;
+  font-weight: 600;
+  font-size: medium;
+}
+.adContent {
+  color: white;
+  font-weight: 500;
+  font-size: small;
 }
